feat(windows): add windows icon and manifest support
- Add windows icon resource and winres configuration
- Update Cargo.toml with winres dependency
- Include icon in release package
- Refactor titlebar options for cross-platform consistency

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -217,6 +217,11 @@ jobs:
             cp "lib/${{ matrix.pdfium_lib }}" "$PACKAGE_DIR/"
           fi
           
+          # Copy icon if available
+          if [ -f "resources/windows/icon.ico" ]; then
+            cp "resources/windows/icon.ico" "$PACKAGE_DIR/"
+          fi
+          
           cat > "$PACKAGE_DIR/README.txt" << 'EOF'
           LightPDF - A lightweight, cross-platform PDF reader
           
