--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ gpui = { version = "0.2.2", default-features = false, features = ["font-kit"] }
 [target.'cfg(target_os = "windows")'.dependencies]
 gpui = { version = "0.2.2", default-features = false, features = ["font-kit", "windows-manifest"] }
 winapi = { version = "0.3.9", features = ["winuser", "commdlg"] }
+winres = "0.1"
 
 [dev-dependencies]
 tempfile = "3.0"
