ci: install zip package for Windows in CI workflow
Add zip installation step for Windows builds to ensure required dependencies are available during the CI process.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install zip (Windows)
+        if: startsWith(matrix.os, 'windows')
+        shell: pwsh
+        run: |
+          choco install zip -y
+
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
