--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -149,9 +149,9 @@ jobs:
           # Create DMG
           hdiutil create -volname "LightPDF" -srcfolder "$APP_BUNDLE" -ov -format UDZO -o "dist/LightPDF-${{ matrix.name }}.dmg"
           
-          # Also create ZIP
+          # Also create ZIP in dist folder
           cd dist
-          zip -r "../LightPDF-${{ matrix.name }}.zip" "${APP_NAME}.app"
+          zip -r "LightPDF-${{ matrix.name }}.zip" "${APP_NAME}.app"
           cd ..
 
       - name: Package Linux AppImage
@@ -159,26 +159,26 @@ jobs:
         run: |
           PACKAGE_DIR="dist/lightpdf-${{ matrix.name }}"
           BINARY="target/${{ matrix.target }}/release/lightpdf"
-          
+
           mkdir -p "$PACKAGE_DIR"
           cp "$BINARY" "$PACKAGE_DIR/"
           chmod +x "$PACKAGE_DIR/lightpdf"
-          
+
           if [ -f "lib/${{ matrix.pdfium_lib }}" ]; then
             cp "lib/${{ matrix.pdfium_lib }}" "$PACKAGE_DIR/"
           fi
-          
+
           # Create AppDir structure for AppImage
           APPDIR="LightPDF.AppDir"
           mkdir -p "$APPDIR/usr/bin"
           mkdir -p "$APPDIR/usr/lib"
           mkdir -p "$APPDIR/apprun/graphics"
-          
+
           cp "$PACKAGE_DIR/lightpdf" "$APPDIR/usr/bin/"
           if [ -f "lib/${{ matrix.pdfium_lib }}" ]; then
             cp "lib/${{ matrix.pdfium_lib }}" "$APPDIR/usr/lib/"
           fi
-          
+
           # Create AppRun
           cat > "$APPDIR/AppRun" << 'EOF'
           #!/bin/bash
@@ -189,7 +189,7 @@ jobs:
           exec "$DIR/usr/bin/lightpdf" "$@"
           EOF
           chmod +x "$APPDIR/AppRun"
-          
+
           # Create desktop file
           cat > "$APPDIR/lightpdf.desktop" << 'EOF'
           [Desktop Entry]
@@ -201,20 +201,20 @@ jobs:
           Type=Application
           Categories=Office;Viewer;
           EOF
-          
+
           # Copy icon if available
           if [ -f "resources/icon.svg" ]; then
             cp "resources/icon.svg" "$APPDIR/apprun/graphics/"
           fi
-          
+
           # Create AppImage if appimagetool is available
           if command -v appimagetool &> /dev/null; then
             appimagetool "$APPDIR" "dist/LightPDF-${{ matrix.name }}.AppImage"
           fi
-          
-          # Create tarball
+
+          # Create tarball in dist folder
           cd dist
-          tar -czvf "../LightPDF-${{ matrix.name }}.tar.gz" "lightpdf-${{ matrix.name }}"
+          tar -czvf "LightPDF-${{ matrix.name }}.tar.gz" "lightpdf-${{ matrix.name }}"
           cd ..
 
       - name: Package Windows
@@ -223,20 +223,21 @@ jobs:
         run: |
           PACKAGE_DIR="dist/lightpdf-${{ matrix.name }}"
           BINARY="target/${{ matrix.target }}/release/lightpdf.exe"
-          
+
           mkdir -p "$PACKAGE_DIR"
           cp "$BINARY" "$PACKAGE_DIR/"
-          
+
           if [ -f "lib/${{ matrix.pdfium_lib }}" ]; then
             cp "lib/${{ matrix.pdfium_lib }}" "$PACKAGE_DIR/"
           fi
-          
+
           if [ -f "resources/windows/icon.ico" ]; then
             cp "resources/windows/icon.ico" "$PACKAGE_DIR/"
           fi
-          
+
+          # Create ZIP in dist folder
           cd dist
-          zip -r "../LightPDF-${{ matrix.name }}.zip" "lightpdf-${{ matrix.name }}"
+          zip -r "LightPDF-${{ matrix.name }}.zip" "lightpdf-${{ matrix.name }}"
           cd ..
 
       - name: Upload artifact
