--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -217,6 +217,12 @@ jobs:
           tar -czvf "LightPDF-${{ matrix.name }}.tar.gz" "lightpdf-${{ matrix.name }}"
           cd ..
 
+      - name: Install WiX
+        if: startsWith(matrix.os, 'windows')
+        run: |
+          dotnet tool install --global wix
+          wix extension add WixUI.wixext
+
       - name: Package Windows
         if: startsWith(matrix.os, 'windows')
         shell: bash
@@ -240,6 +246,13 @@ jobs:
           zip -r "LightPDF-${{ matrix.name }}.zip" "lightpdf-${{ matrix.name }}"
           cd ..
 
+      - name: Build Windows MSI
+        if: startsWith(matrix.os, 'windows')
+        shell: bash
+        run: |
+          # Build MSI using WiX
+          wix build -arch x64 -o "dist/LightPDF-${{ matrix.name }}.msi" wix/LightPDF.wxs
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -249,6 +262,7 @@ jobs:
             dist/*.dmg
             dist/*.AppImage
             dist/*.tar.gz
+            dist/*.msi
 
   release:
     name: Create Release
@@ -273,6 +287,7 @@ jobs:
             artifacts/**/*.dmg
             artifacts/**/*.AppImage
             artifacts/**/*.tar.gz
+            artifacts/**/*.msi
           draft: false
           prerelease: false
           generate_release_notes: true
