--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ path-slash = "0.2.1"
 chrono = { version = "0.4", features = ["serde"] }
 env_logger = "0.11"
 log = "0.4"
+rfd = "0.14"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 gpui = { version = "0.2.2", default-features = false, features = ["font-kit"] }
@@ -34,8 +35,8 @@ gpui = { version = "0.2.2", default-features = false, features = ["font-kit"] }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 gpui = { version = "0.2.2", default-features = false, features = ["font-kit", "windows-manifest"] }
-winapi = { version = "0.3.9", features = ["winuser", "commdlg"] }
 winres = "0.1"
+windows = { version = "0.52", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Graphics_Printing", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_UI_Controls_Dialogs", "Win32_Storage_Xps", "Win32_System_WinRT", "Win32_Security", "Win32_Graphics_GdiPlus"] }
 
 [dev-dependencies]
 tempfile = "3.0"
