--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ rfd = "0.14"
 gpui = { version = "0.2.2", default-features = false, features = ["font-kit"] }
 core-text = "=21.0.0"
 objc = "0.2"
+objc-foundation = "0.1.1"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 gpui = { version = "0.2.2", default-features = false, features = ["font-kit"] }
